# mcc

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  sample.toml
mccole/: __init__.py  build.py  check.py  clui.py  util.py
tests/: test_build.py
