[project]
name = "mccole"
version = "0.1.0"
description = "a simple static site generator"
readme = "README.md"
authors = [
    { name = "Greg Wilson", email = "gvwilson@third-bit.com" }
]
requires-python = ">=3.11"
dependencies = ["click", "tomli", "ruff", "markdown", "beautifulsoup4", "jinja2"]

[project.optional-dependencies]
dev = [
    "pyfakefs",
    "pytest"
]

[project.scripts]
mccole = "mccole:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
